# Chess

./: .gitignore  Makefile  README.md  base.py  board.py  config.yaml  dummy.py  env.py  main.py  mono_agent_env.py  multi_agent_env.py  multienv.py  piece.py  play.py  pyproject.toml  ray_rl_agent.py  requirements.txt  rl_agent.py  run.py  test.py  train.py
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
scripts/: generate_readme_assets.py  render_vs_ai_preview.py
src/: globals.py
src/algorithms/: minmax.py
src/chess/: __init__.py  __main__.py  cli.py  config.py  layout.py  log.py  paths.py
src/chess/ai/: minmax.py
src/chess/core/: __init__.py  board.py  board_state.py  piece.py  types.py  zobrist.py
src/chess/ui/: __init__.py  colors.py  layers.py  overlay.py  pieces.py  render.py  sandbox.py  scene.py  text.py  theme.py  vs_ai.py
src/env/base/: board.py  piece.py
src/env/rl/: base.py  mono_agent_env.py  multi_agent_env.py
tests/: conftest.py  test_board_moves.py  test_layers.py  test_layout.py  test_minmax.py  test_panel_layout.py  test_piece_assets.py  test_smoke.py
