[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess"
version = "0.2.0"
description = "Interactive chess board with minimax AI (alpha-beta pruning)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26,<3",
    "pygame>=2.6,<3",
    "PyYAML>=6,<7",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
chess = "chess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
